Set Origin causes unexpected offset on Grease Pencil strokes when Curve Editing is enabled #93134

Closed
opened 2021-11-16 17:38:13 +01:00 by Sam Brubaker · 8 comments

System Information
Operating system: Linux 64-bit
Graphics card: GTX 1080 ti

Blender Version
3.1 alpha and prior

Short description of error
If you use Origin to 3D Cursor on a Grease Pencil object that uses Curve Editing, the strokes will be offset next time you enter edit mode.
set_origin_bug.blend
Exact steps for others to reproduce the error

  • Open attached file
  • Use Set Origin > Origin to 3D Cursor on selected GP object

Enter Edit Mode

**System Information** Operating system: Linux 64-bit Graphics card: GTX 1080 ti **Blender Version** 3.1 alpha and prior **Short description of error** If you use Origin to 3D Cursor on a Grease Pencil object that uses Curve Editing, the strokes will be offset next time you enter edit mode. [set_origin_bug.blend](https://archive.blender.org/developer/F11815652/set_origin_bug.blend) **Exact steps for others to reproduce the error** - Open attached file - Use Set Origin > Origin to 3D Cursor on selected GP object # Enter Edit Mode
Author

Added subscriber: @rocketman

Added subscriber: @rocketman
Sam Brubaker changed title from Set Origin causes unexpected offset when Curve Editing is enabled to Set Origin causes unexpected offset on Grease Pencil strokes when Curve Editing is enabled 2021-11-16 17:39:07 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2021-11-16 22:36:10 +01:00
Antonio Vazquez removed their assignment 2021-11-16 22:37:13 +01:00

Added subscribers: @filedescriptor, @antoniov

Added subscribers: @filedescriptor, @antoniov

@filedescriptor An update of Bezier data is missing. Could you add it because you know better than me this part of the code?

I think is missing:

/* Update the selection from the stroke to the curve. */
BKE_gpencil_editcurve_stroke_sync_selection(gpd, gps, gps->editcurve);```

@filedescriptor An update of Bezier data is missing. Could you add it because you know better than me this part of the code? I think is missing: ```BKE_gpencil_stroke_editcurve_update(gpd, gpl, gps); ``` /* Update the selection from the stroke to the curve. */ BKE_gpencil_editcurve_stroke_sync_selection(gpd, gps, gps->editcurve);```

The section to fix is object_origin_set_execfunction around line 1418

The section to fix is `object_origin_set_exec`function around line `1418`

This issue was referenced by e8a8e953b3

This issue was referenced by e8a8e953b3d11bf99f4835b082fec9e2bf2be468

This issue was referenced by 52da1afbf6

This issue was referenced by 52da1afbf67c3be7e4e561ed232632a628c6912b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez self-assigned this 2021-12-30 11:39:12 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93134
No description provided.